# trilinos-issue-12846

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_trilinos.sh  compiler-output.txt  config_trilinos.sh  example.cc  modules.sh
